syntax = "proto3";

message GetPhotoGrpcRequest{
  string profileId = 1;
  string photoId = 2;
}

message GetPhotoGrpcResponse{
  bytes file = 1;
  int32 httpStatusCode = 2;
}

service PostMicroservice{
  rpc GetPhoto (GetPhotoGrpcRequest) returns (GetPhotoGrpcResponse);
}